--- a/docs/TeXFiles/040_theoretErweiterungen.tex
+++ b/docs/TeXFiles/040_theoretErweiterungen.tex
@@ -3,34 +3,46 @@
 
 Dieser Abschnitt behandelt weiterführende Fragestellungen der Roboterbahnplanung, die über die Implementierung des planaren Manipulators hinausgehen. Gemäß der Aufgabenstellung werden im Folgenden die notwendigen Systemerweiterungen für translatorische Gelenke sowie Methoden zur nachträglichen Bahnoptimierung diskutiert.
 
+
+
+
+
 \section{Erweiterung um translatorische Gelenke}
 Das in dieser Arbeit betrachtete System besteht aus einer mobilen Basis (3 Freiheitsgrade) und einem Arm mit rotatorischen Gelenken (Revolute Joints). Ein translatorisches Gelenk (Prisma-Gelenk) ermöglicht hingegen eine lineare Relativbewegung zwischen zwei Segmenten, was sowohl den Arbeitsraum als auch die kinematische Modellierung beeinflusst \cite{siciliano2016}.
+
+
+
 
 \subsection{Auswirkung auf die Kinematik}
 In der Vorwärtskinematik wird die Lage eines Segments relativ zum vorherigen Segment üblicherweise durch homogene Transformationsmatrizen $T$ beschrieben. 
 
-Für ein **rotatorisches Gelenk** rotiert das lokale Koordinatensystem um die Gelenkachse (z.\,B. z-Achse) um den variablen Winkel $\theta$. Die Matrix hat die Form:
+Für ein \textbf{rotatorisches Gelenk} rotiert das lokale Koordinatensystem um die Gelenkachse (z.\,B. z-Achse) um den variablen Winkel $\theta$. Die Matrix hat die Form:
 \begin{equation}
-    T_{rot}(\theta) = \begin{pmatrix}
+    T_{rot}(\theta) = \begin{bmatrix}
     \cos\theta & -\sin\theta & 0 & 0 \\
     \sin\theta & \cos\theta & 0 & 0 \\
     0 & 0 & 1 & 0 \\
     0 & 0 & 0 & 1
-    \end{pmatrix}
+    \end{bmatrix}
 \end{equation}
 
-Für ein **translatorisches Gelenk** ist die Rotation statisch, während die Verschiebung $d$ entlang der Gelenkachse variabel ist. Die Transformationsmatrix ändert sich folglich zu:
+Für ein \textbf{translatorisches Gelenk} ist die Rotation statisch, während die Verschiebung $d$ entlang der Gelenkachse variabel ist. Die Transformationsmatrix ändert sich folglich zu:
 \begin{equation}
-    T_{trans}(d) = \begin{pmatrix}
+    T_{trans}(d) = \begin{bmatrix}
     1 & 0 & 0 & 0 \\
     0 & 1 & 0 & 0 \\
     0 & 0 & 1 & d \\
     0 & 0 & 0 & 1
-    \end{pmatrix}
+    \end{bmatrix}
 \end{equation}
+
+\newpage
 
 \textbf{Implementierungstechnische Konsequenzen:}
 Für die Integration in den bestehenden \texttt{CollisionChecker} müsste die Methode zur Berechnung der Robotergeometrie (\texttt{get\_robot\_geometry}) angepasst werden. Anstatt für jedes Gelenk den Winkel zu akkumulieren, müsste für Prisma-Gelenke die effektive Länge des Segments dynamisch berechnet werden. Das Gelenk $q_i$ würde direkt als Längenänderung in die Berechnung der Endpunktkoordinaten eingehen.
+
+
+
 
 \subsection{Anpassung des Konfigurationsraums (C-Space)}
 Die Einführung translatorischer Freiheitsgrade verändert die Topologie und die Metrik des Konfigurationsraums \cite{lavalle2006}:
@@ -39,8 +51,17 @@ Die Einführung translatorischer Freiheitsgrade verändert die Topologie und die
     \item \textbf{Sampling und Metrik:} Wie bereits bei der mobilen Basis ($x, y$ in \ac{LE}, $\theta$ in Radiant), liegen auch bei einem Arm mit translatorischen Gelenken gemischte Einheiten vor. Dies stellt besondere Anforderungen an die Distanzfunktion (Metrik) für die \textit{Nearest-Neighbor}-Suche. Da eine Differenz von $1\,\text{\ac{LE}}$ nicht äquivalent zu $1\,\text{rad}$ ist, muss zwingend eine \textbf{gewichtete Euklidische Metrik} verwendet werden. Hierbei werden die translatorischen und rotatorischen Dimensionen mit Gewichtungsfaktoren $w_i$ skaliert, um einen homogenen Abstandsraum zu schaffen.
 \end{itemize}
 
+\newpage
+
+
+
+
+
 \section{Optimierung und Glättung von Bewegungsbahnen}
 Die von Sampling-basierten Algorithmen erzeugten Pfade bestehen naturgemäß aus linearen Segmenten zwischen zufällig platzierten Wegpunkten. Dies resultiert oft in \enquote{zackigen}, suboptimalen Bahnen mit abrupten Richtungsänderungen. Eine Nachbearbeitung (Post-Processing) ist daher essenziell \cite{choset2005}.
+
+
+
 
 \subsection{Shortcut-Methode (Pruning)}
 Ein effizienter Ansatz zur Reduktion der Pfadlänge ist die heuristische Shortcut-Methode. Dieser Algorithmus arbeitet iterativ auf dem initialen diskreten Pfad:
@@ -51,6 +72,9 @@ Ein effizienter Ansatz zur Reduktion der Pfadlänge ist die heuristische Shortcu
     \item Ist die Verbindung valide, werden alle dazwischenliegenden Wegpunkte entfernt und durch die direkte Kante ersetzt.
 \end{enumerate}
 Das Ergebnis ist ein stückweise linearer Pfad. Dieser ist zwar kürzer, bleibt jedoch lediglich $C^0$-stetig\footnote{$C^0$-Stetigkeit bedeutet, dass der Pfad zusammenhängend ist (keine Sprünge in der Position), aber Knicke aufweist. An diesen Knicken ist die Geschwindigkeit unstetig (der Roboter müsste theoretisch anhalten, um die Richtung zu ändern).}, was zu mechanisch ungünstigen Stopp-and-Go-Bewegungen an den Wegpunkten führt.
+
+
+
 
 \subsection{Glättung mittels Splines}
 Um eine kinematisch hochwertige Bahn zu generieren, können die Wegpunkte des optimierten Pfades durch Spline-Kurven approximiert werden. Ziel ist hierbei oft $C^2$-Stetigkeit\footnote{$C^2$-Stetigkeit bedeutet, dass nicht nur die Position und die Geschwindigkeit ($C^1$), sondern auch die Beschleunigung stetig verläuft. Dies ermöglicht ruckfreie Bewegungen.}.
