Changed the save folder to variable

--- a/notebooks/Mobile_Manipulator_Main.ipynb
+++ b/notebooks/Mobile_Manipulator_Main.ipynb
@@ -111,7 +111,7 @@
     "from IPLazyPRM_multiGoal import LazyPRM as LazyPRM_multiGoal\n",
     "from IPVISLazyPRM import lazyPRMVisualize\n",
     "\n",
-    "folderName2save = \"20251228_SelfCheck\"\n"
+    "folderPath2save = \"/Users/glaserpaul/Documents/010_HKA_RKIM/Mobiler_Manipulator/runs/20251228_SelfCheck\"\n"
    ]
   },
   {
@@ -388,7 +388,7 @@
     "    benchNames, \n",
     "    plannerFactory, \n",
     "    save_plots=True,       # Auf True setzen zum Speichern\n",
-    "    output_dir=f\"/Users/glaserpaul/Documents/010_HKA_RKIM/Mobiler_Manipulator/runs/{folderName2save}\" # Ordnername\n",
+    "    output_dir=folderPath2save # Ordnername\n",
     ")"
    ]
   },
@@ -434,7 +434,7 @@
     "    resultList,\n",
     "    benchList,\n",
     "    save_plots=True,       # Auf True setzen zum Speichern\n",
-    "    output_dir=f\"/Users/glaserpaul/Documents/010_HKA_RKIM/Mobiler_Manipulator/runs/{folderName2save}\" # Ordnername\n",
+    "    output_dir=folderPath2save # Ordnername\n",
     ")"
    ]
   },
@@ -477,7 +477,8 @@
     "BatchPlotter.visualize(\n",
     "    df_results,\n",
     "    save_plots=True,\n",
-    "    output_dir=f\"/Users/glaserpaul/Documents/010_HKA_RKIM/Mobiler_Manipulator/runs/{folderName2save}\")"
+    "    output_dir=folderPath2save\n",
+    ")"
    ]
   }
  ],
